added new pictures and modified file

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,7 +2,7 @@
   <div class="bg-faded p-4 my-4">
     <hr class="divider">
     <h2 class="text-center text-lg text-uppercase my-0">About
-      <strong>Academic Architect</strong>
+      <strong>Forevermore Santore</strong>
     </h2>
     <hr class="divider">
     <div class="row">
