--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>The Academic Architect</title>
+    <title>Forevermore Santore</title>
 
     <!-- Bootstrap core CSS -->
     <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
@@ -39,7 +39,7 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img class="d-block img-fluid w-100" src="img/background-2846206_640.jpg" alt="">
+              <img class="d-block img-fluid w-100" src="img/ceremony.png" alt="">
               <div class="carousel-caption d-none d-md-block">
                 <h3 class="text-shadow">What is College Admissions Consulting?</h3>
                 <p class="text-shadow"></p>
@@ -86,7 +86,7 @@
 
     <!-- /.container -->
 
-    
+
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
