--- a/app/views/pages/successstories.html.erb
+++ b/app/views/pages/successstories.html.erb
@@ -24,24 +24,23 @@
 
   <body>
 
-    
+
 
     <div class="container">
 
       <div class="bg-faded p-4 my-4">
         <hr class="divider">
-        <h2 class="text-center text-lg text-uppercase my-0">You Graduated....
-          <strong>Now What?</strong>
+        <h2 class="text-center text-lg text-uppercase my-0">The Ceremony Will Take Place In
+          <strong>The Garden Room</strong>
         </h2>
         <hr class="divider">
         <div class="row">
           <div class="col-lg-6">
-            <img class="img-fluid mb-4 mb-lg-0" src="img/acedemic architect bubbles FINAL transparent.png" alt="">
+            <img class="img-fluid mb-4 mb-lg-0" src="img/gardenroom.jpg" alt="">
           </div>
           <div class="col-lg-6">
-            <p>Let Academic Architect take the stress out of your next step, whether it be applying for college, graduate school, or your next job. </p>
-            <p>I have helped clients get into their dream colleges, grad schools, and into careers such as an Elementary Education Principal, Nurse, Lawyer, Paralegal, Engineer, Sports Management , Purchasing Professional, Photographer, Teacher, Various roles in Finance, Librarian , Pharmacist, Accountant, Various roles in Informational Technology. </p>
-            <p> See the schools I have gotten my clients into below. </p>
+            <p>The ceremony will take place on the lower level of The Waterview in the Garden Room. </p>
+            <p>The bright and spacious room boast large windows overlooking Lake Zoar and the cermony will take place just before sunset.  </p>
           </div>
         </div>
       </div>
@@ -49,37 +48,36 @@
       <div class="bg-faded p-4 my-4">
         <hr class="divider">
         <h2 class="text-center text-lg text-uppercase my-0">
-          <strong>Client Success Stories</strong>
+          <strong>Dinner Options</strong>
         </h2>
         <hr class="divider">
         <div class="row">
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="img/western-new-england.jpg" alt="">
+              <img class="card-img-top" src="img/Filet_Mignon.jpg" alt="">
               <div class="card-body text-center">
-                <p></p><br><br>
-                <h4 class="card-title m-0">Bianca <br>
-                  <small class="text-muted">Doctor of Pharmacy Program</small>
+                <h4 class="card-title m-0">Filet Mignon <br>
+                  <small class="text-muted">Blue-Cheese Crusted Filet Mignon with Asparagus and Mashed Potatoes</small>
                 </h4>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="img/rpi.png" alt="">
+              <img class="card-img-top" src="img/poached-salmon_dill.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0"> William <br>
-                  <small class="text-muted">Rensselaer Polytechnic Institute</small>
+                <h4 class="card-title m-0"> Poached Atlantic Salmon <br>
+                  <small class="text-muted"> Poached Atlantic Salmon with Seasonal Vegatables and Lemon Aioli</small>
                 </h4>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="card h-100">
-              <img class="card-img-top" src="img/uconnmba.jpg" alt="">
+              <img class="card-img-top" src="img/pecanchicken.jpeg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">Farzana <br>
-                  <small class="text-muted">UCONN MBA Program</small>
+                <h4 class="card-title m-0">Pecan-crusted Chicken <br>
+                  <small class="text-muted">Pecan Crusted Chicken with Brussel Sprouts and Sweet Potatoes</small>
                 </h4>
               </div>
             </div>
