--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <!-- make this dynamic / use a property on application controller that's updated -->
-  <title>Liawebsite2</title>
+  <title>Forevermore Santore</title>
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -27,8 +27,8 @@
 </head>
 <body>
 
-<div class="tagline-upper text-center text-heading text-shadow text-white mt-5 d-none d-lg-block">The Academic Architect</div>
-<div class="tagline-lower text-center text-expanded text-shadow text-uppercase text-white mb-5 d-none d-lg-block">Undergraduate and Graduate Admissions Consulting and Career Coaching</div>
+<div class="tagline-upper text-center text-heading text-shadow text-white mt-5 d-none d-lg-block">Forevermore Santore</div>
+<div class="tagline-lower text-center text-expanded text-shadow text-uppercase text-white mb-5 d-none d-lg-block">The Definitive Guide To Our Wedding Day</div>
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light bg-faded py-lg-4">
@@ -45,13 +45,13 @@
           </a>
         </li>
         <li class="nav-item active px-lg-4">
-          <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
+          <a class="nav-link text-uppercase text-expanded" href="about.html">About Us</a>
         </li>
         <li class="nav-item px-lg-4">
-          <a class="nav-link text-uppercase text-expanded" href="successstories.html">Success Stories</a>
+          <a class="nav-link text-uppercase text-expanded" href="successstories.html">Venue Information</a>
         </li>
         <li class="nav-item px-lg-4">
-          <a class="nav-link text-uppercase text-expanded" href="/appointments.html">Book an Appointment</a>
+          <a class="nav-link text-uppercase text-expanded" href="/appointments.html">Where To Stay</a>
         </li>
       </ul>
     </div>
