Added venue informtion and pictures
added more pictures for banner

--- a/app/views/pages/appointments.html.erb
+++ b/app/views/pages/appointments.html.erb
@@ -31,22 +31,23 @@
 
         <div class="bg-faded p-4 my-4">
           <hr class="divider">
-          <h2 class="text-center text-lg text-uppercase my-0"> Email Me or <br>
-            <strong>Book an Appointment Below</strong>
+          <h2 class="text-center text-lg text-uppercase my-0"> Hotel Block at <bold>The Heritage Hotel and Spa </bold><br>
+            <strong><a href="https://www.bestwestern.com/en_US/book/hotel-rooms.07029.html?groupId=7R6GY0I5">Book Here</a></strong>
           </h2>
           <hr class="divider">
           <div class="row">
             <div class="col-lg-8">
-              <!-- Calendly inline widget begin -->
-              <div class="calendly-inline-widget" data-url="https://calendly.com/lialevitt/60min" style="min-width:320px;height:580px;"></div>
-              <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
-<!-- Calendly inline widget end -->
+          <img src="/img/heritage hotel.jpg" alt="hertitage hotel" style="width:228px;height:228px;">
+          <img src="/img/outsidehotel.jpg" alt="hertitage hotel" style="width:228px;height:228px;">
+
 
             </div>
             <div class="col-lg-4">
+              <h5 class="mb-0">Address: </h5>
+              <div class="mb-4"> 522 Heritage Rd, Southbury, CT 06488</div>
               <h5 class="mb-0">Phone:</h5>
-              <div class="mb-4"><a href="tel:1-203-947-5271">1-847-555-5555</a> </div>
-              <h5 class="mb-0"><a href="mailto:academicarchitect@yahoo.com">Email: AcademicArchitect@yahoo.com </a> </h5>
+              <div class="mb-4"><a href="tel:(203) 267-2639">(203) 267-2639</a> </div>
+              <p> Ask for the Santore/Ward room block </p>
               <div class="mb-4">
 
               </div>
