--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -46,7 +46,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid w-100" src="img/womens-2701154_640.jpg" alt="">
+              <img class="d-block img-fluid w-100" src="img/floridashot.jpg" style="height:528px;">
               <div class="carousel-caption d-none d-md-block">
                 <h3 class="text-shadow">Is your resume in top shape?</h3>
                 <p class="text-shadow"></p>
@@ -77,8 +77,8 @@
         <h2 class="text-center text-lg text-uppercase my-0">Together, let's build a blueprint for
           <strong>your future</strong>
         </h2>
-        <hr class="divider">
-        <img class="img-fluid float-left mr-4 d-none d-lg-block" src="img/academic architect fb profile pic.png" alt="">
+        <div data-type="countdown" data-id="1497077" class="tickcounter" style="width: 100%; position: relative; padding-bottom: 25%"><a href="//www.tickcounter.com/countdown/1497077/our-wedding-countdown" title="Our Wedding Countdown">Our Wedding Countdown</a><a href="//www.tickcounter.com/" title="Countdown">Countdown</a></div><script>(function(d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script>
+
         <p>  Specializing in a complete college onboarding solution including, but not limited to, school and major selection, essay, personal statement, and school specific essay advising, common and individualschool application completion, resumes, cover letters, more! </p>
         <p>I believe your education gives you the credentials and flexibility to define your future. Helping other achieve their academic goals is a passion of mine that I turned into a small business. I work with high school students, graduate school applicants, and parents to develop a customized plan to coach them towards academic success and program admissions. I believe in a mentoring based approach, where I strive to get to know each student (and their family) and forge an ongoing relationship based on trust, coaching, and goal orientation. I have never worked with a student who did not go onto to pursue a degree in a program they were satisfied with. My experience is vast and I've worked to assist people in the application process to undergraduate, graduate, MBA, medical, and law school.</p>
       </div>
