Added new text to about us and Venue
added new text to home page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,14 +7,21 @@
     <hr class="divider">
     <div class="row">
       <div class="col-lg-6">
-        <img class="img-fluid mb-4 mb-lg-0" src="img/2017_09_28_Lia_LookOne_01.jpg" alt="">
+        <img class="img-fluid mb-4 mb-lg-0" src="img/IMG_6420.jpg" alt="">
       </div>
       <div class="col-lg-6">
-        <p>I am Ivy League educated with a Master of Philosophy in Organizational Dynamics, Organizational Consulting and Executive Coaching with a 4.0 GPA. I received my B.A. in Communications with a concentration in Human Relations. I also have an M.S. in Leadership and Strategic Management and a graduate certificate in Nonprofit Management from Manhattanville College. Professionally, I work in leadership coaching and learning  and development consulting at a financial services institution. I was an adjunct professor at Western Connecticut State University, where I taught Interpersonal Communications, Public Speaking, and other Communication Classes until I began my studies at UPenn.</p>
-        <p>I believe your education gives you the credentials and flexibility to define your future. Helping others achieve their academic goals is a passion of mine that I turned into a small business. I work with high school students, graduate school applicants, and parents to develop a customized plan to coach them towards academic success and program admissions. I believe in a mentoring based approach, where I strive to get to know each student (and their family) and forge an ongoing relationship based on trust, coaching, and goal orientation. I have never worked with a student who did not go onto to pursue a degree in a program they were satisfied with. My experience is vast and I've worked to assist people in the application process to undergraduate, graduate, MBA, medical, and law school. </p>
+        <p> Dave - loves Dad jokes, yard work, his white new balances, and beer. </p>
+        <p> Katherine loves running, traveling, cats - especially her pet Reggie, tacos, and wine. </p>
+        <p> While we have very different interests in life, we share the same values. We are also both recent
+        graduates of General Assembly's Web Development and Software Engineering Immersive programs. </p>
 
-        <p> In addition to college admissions consulting, I offer SAT verbal and writing prep, both major selection and career coaching, interview preparation, and resume and cover letter creation or revisions. I am available evenings and weekends to work one on one or in small groups with students in the Connecticut, and Westchester, NY area. I also do skype/ FaceTime appointments so distance is not a problem. My business is 100% referral based, and I am pleased to work with client’s siblings, family members, and neighbors. </p>
+        <p> Enough about us. We want to know what <bold> you </bold> want to hear us play at our wedding.
 
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSfJaHEe44JT-7XGsV2dcNReDGlHbmkYbjZj1roN2Q5qMQf8rg/viewform?usp=pp_urlhttps://docs.google.com/forms/d/e/1FAIpQLSfJaHEe44JT-7XGsV2dcNReDGlHbmkYbjZj1roN2Q5qMQf8rg/viewform?usp=pp_url" target="_blank">Request a song here</a></p>
+
+<p>  Disclaimer: we can't promise it will be played. </p>
+
+<p> We are registered at Bed Bath and Beyond. You can find our registry here. 
       </div>
     </div>
   </div>
