--- a/app/views/pages/appointments.html.erb
+++ b/app/views/pages/appointments.html.erb
@@ -48,6 +48,7 @@
               <h5 class="mb-0">Phone:</h5>
               <div class="mb-4"><a href="tel:(203) 267-2639">(203) 267-2639</a> </div>
               <p> Ask for the Santore/Ward room block </p>
+              <p> Rates begin at $109 a night </p>
               <div class="mb-4">
 
               </div>
