--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -41,14 +41,14 @@
             <div class="carousel-item active">
               <img class="d-block img-fluid w-100" src="img/ceremony.png" alt="">
               <div class="carousel-caption d-none d-md-block">
-                <h3 class="text-shadow">What is College Admissions Consulting?</h3>
+
                 <p class="text-shadow"></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid w-100" src="img/floridashot.jpg" style="height:528px;">
+              <img class="d-block img-fluid w-100" src="img/IMG_6420.jpg" style="height:528px;">
               <div class="carousel-caption d-none d-md-block">
-                <h3 class="text-shadow">Is your resume in top shape?</h3>
+                
                 <p class="text-shadow"></p>
               </div>
             </div>
@@ -74,13 +74,11 @@
 
       <div class="bg-faded p-4 my-4">
         <hr class="divider">
-        <h2 class="text-center text-lg text-uppercase my-0">Together, let's build a blueprint for
-          <strong>your future</strong>
+        <h2 class="text-center text-lg text-uppercase my-0">Counting Down To The Big Day!
         </h2>
         <div data-type="countdown" data-id="1497077" class="tickcounter" style="width: 100%; position: relative; padding-bottom: 25%"><a href="//www.tickcounter.com/countdown/1497077/our-wedding-countdown" title="Our Wedding Countdown">Our Wedding Countdown</a><a href="//www.tickcounter.com/" title="Countdown">Countdown</a></div><script>(function(d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script>
 
-        <p>  Specializing in a complete college onboarding solution including, but not limited to, school and major selection, essay, personal statement, and school specific essay advising, common and individualschool application completion, resumes, cover letters, more! </p>
-        <p>I believe your education gives you the credentials and flexibility to define your future. Helping other achieve their academic goals is a passion of mine that I turned into a small business. I work with high school students, graduate school applicants, and parents to develop a customized plan to coach them towards academic success and program admissions. I believe in a mentoring based approach, where I strive to get to know each student (and their family) and forge an ongoing relationship based on trust, coaching, and goal orientation. I have never worked with a student who did not go onto to pursue a degree in a program they were satisfied with. My experience is vast and I've worked to assist people in the application process to undergraduate, graduate, MBA, medical, and law school.</p>
+
       </div>
 
 
