--- a/app/views/pages/successstories.html.erb
+++ b/app/views/pages/successstories.html.erb
@@ -30,8 +30,8 @@
 
       <div class="bg-faded p-4 my-4">
         <hr class="divider">
-        <h2 class="text-center text-lg text-uppercase my-0">The Ceremony Will Take Place In
-          <strong>The Garden Room</strong>
+        <h2 class="text-center text-lg text-uppercase my-0">
+          <strong>The Waterview</strong>
         </h2>
         <hr class="divider">
         <div class="row">
@@ -39,8 +39,11 @@
             <img class="img-fluid mb-4 mb-lg-0" src="img/gardenroom.jpg" alt="">
           </div>
           <div class="col-lg-6">
-            <p>The ceremony will take place on the lower level of The Waterview in the Garden Room. </p>
+
+            <p>The ceremony will take place on the lower level of The Waterview in the Garden Room beginning at 3:45pm. </p>
             <p>The bright and spacious room boast large windows overlooking Lake Zoar and the cermony will take place just before sunset.  </p>
+            <P> Cocktail hour, dinner, and dancing will commence immeadiately after upstairs in the East Ballroom. </p>
+            <p> Address: 215 Roosevelt Drive, Monroe, CT
           </div>
         </div>
       </div>
