--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,14 +39,14 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img class="d-block img-fluid w-100" src="img/ceremony.png" alt="">
+              <img class="d-block img-fluid w-100" src="img/ceremony.png">
               <div class="carousel-caption d-none d-md-block">
                 <h3 class="text-shadow">What is College Admissions Consulting?</h3>
                 <p class="text-shadow"></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid w-100" src="img/floridashot.jpg" style="height:528px;">
+              <img class="d-block img-fluid w-100" src="img/floridashot1.jpg">
               <div class="carousel-caption d-none d-md-block">
                 <h3 class="text-shadow">Is your resume in top shape?</h3>
                 <p class="text-shadow"></p>
