Added new photo to carousel
Added more info to venue information

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -11,9 +11,10 @@
       </div>
       <div class="col-lg-6">
         <p> Dave - loves Dad jokes, yard work, his white new balances, and beer. </p>
+        
         <p> Katherine loves running, traveling, cats - especially her pet Reggie, tacos, and wine. </p>
-        <p> While we have very different interests in life, we share the same values. We are also both recent
-        graduates of General Assembly's Web Development and Software Engineering Immersive programs. </p>
+
+        <p> While we have very different interests in life, we share the same values. </p>
 
         <p> Enough about us. We want to know what <bold> you </bold> want to hear us play at our wedding.
 
@@ -21,7 +22,7 @@
 
 <p>  Disclaimer: we can't promise it will be played. </p>
 
-<p> We are registered at Bed Bath and Beyond. You can find our registry here. 
+<p> We are registered at Bed Bath and Beyond.
       </div>
     </div>
   </div>
