--- a/app/views/pages/successstories.html.erb
+++ b/app/views/pages/successstories.html.erb
@@ -40,6 +40,7 @@
           </div>
           <div class="col-lg-6">
 
+            <p> The wedding will be held at The Waterview in Monroe, Connecticut. </p>
             <p>The ceremony will take place on the lower level of The Waterview in the Garden Room beginning at 3:45pm. </p>
             <p>The bright and spacious room boast large windows overlooking Lake Zoar and the cermony will take place just before sunset.  </p>
             <P> Cocktail hour, dinner, and dancing will commence immeadiately after upstairs in the East Ballroom. </p>
