--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -46,16 +46,16 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid w-100" src="img/IMG_6420.jpg" style="height:528px;">
+              <img class="d-block img-fluid w-100" src="img/florida1.jpg" >
               <div class="carousel-caption d-none d-md-block">
-                
+
                 <p class="text-shadow"></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid w-100" src="img/acedemic architect bubbles FINAL transparent.png" alt="">
+              <img class="d-block img-fluid w-100" src="img/iceplant.png" alt="">
               <div class="carousel-caption d-none d-md-block">
-                <h3 class="text-shadow">Academic Architect will get you through from start to finish!</h3>
+                
                 <p class="text-shadow"></p>
               </div>
             </div>
@@ -73,6 +73,7 @@
 
 
       <div class="bg-faded p-4 my-4">
+        <h2>
         <hr class="divider">
         <h2 class="text-center text-lg text-uppercase my-0">Counting Down To The Big Day!
         </h2>
