Added about us section
added about us

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -10,11 +10,11 @@
         <img class="img-fluid mb-4 mb-lg-0" src="img/IMG_6420.jpg" alt="">
       </div>
       <div class="col-lg-6">
-        <p> Dave - loves Dad jokes, yard work, his white new balances, and beer. </p>
-        
-        <p> Katherine loves running, traveling, cats - especially her pet Reggie, tacos, and wine. </p>
+        <p> A former librarian turned software developer, Katherine knows a thing or two about cracking the code - be it the Dewey Decimal System, or a website application. When she’s not on the computer, she’s off going for a run, having some tacos, drinking wine, and - last but not least - petting her regal cat, Reggie.  </p>
 
-        <p> While we have very different interests in life, we share the same values. </p>
+        <p> With a sense of humor that is best described as, “fatherly”, Dave’s jokes are a favorite amongst his #1 fan: himself! You can find Dave in the garage tinkering with endless house projects or his truck, on the golf course, or in the backyard grilling while forgetting to set his fantasy football lineups. Notice how each of these hobbies
+            are all outdoors so he can stay away from occasional attacks from Kathy’s noble defender Reggie. </p>
+
 
         <p> Enough about us. We want to know what <bold> you </bold> want to hear us play at our wedding.
 
