Added venue information and changed trademark

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,7 @@
 
 <footer class="bg-faded text-center py-5">
   <div class="container">
-    <p class="m-0">Copyright &copy; Katherine Ward Designs 2017</p>
+    <p class="m-0">Copyright &copy; Katherine and David Designs 2019</p>
   </div>
 </footer>
 
