Added food descriptions

--- a/app/views/pages/successstories.html.erb
+++ b/app/views/pages/successstories.html.erb
@@ -61,7 +61,7 @@
               <img class="card-img-top" src="img/Filet_Mignon.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">Filet Mignon <br>
-                  <small class="text-muted">Blue-Cheese Crusted Filet Mignon with Asparagus and Mashed Potatoes</small>
+                  <small class="text-muted">Grilled Filet Mignon with a Blue Cheese and Herb Roasted Crust served with Squash Risotto, Grilled Asparagus, and a Balsamic Glaze </small>
                 </h4>
               </div>
             </div>
@@ -71,7 +71,7 @@
               <img class="card-img-top" src="img/poached-salmon_dill.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0"> Poached Atlantic Salmon <br>
-                  <small class="text-muted"> Poached Atlantic Salmon with Seasonal Vegatables and Lemon Aioli</small>
+                  <small class="text-muted"> Atlantic Salmon poached in White Wine and served on a Fresh Tomato Ratatouille with Lemon Dill Aioli</small>
                 </h4>
               </div>
             </div>
@@ -81,7 +81,7 @@
               <img class="card-img-top" src="img/pecanchicken.jpeg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">Pecan-crusted Chicken <br>
-                  <small class="text-muted">Pecan Crusted Chicken with Brussel Sprouts and Sweet Potatoes</small>
+                  <small class="text-muted">Frenched Chicken Breast with Roasted Sweet Potato and Brussel Sprouts in an Amaretto Glaze</small>
                 </h4>
               </div>
             </div>
