--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -22,7 +22,9 @@
 
 <p>  Disclaimer: we can't promise it will be played. </p>
 
-<p> We are registered at Bed Bath and Beyond.
+<p> We are registered at Bed Bath and Beyond. </p>
+
+  <img class="img-fluid mb-4 mb-lg-0" src="img/bbb.png" alt="">
       </div>
     </div>
   </div>
