--- a/app/views/pages/successstories.html.erb
+++ b/app/views/pages/successstories.html.erb
@@ -36,7 +36,7 @@
         <hr class="divider">
         <div class="row">
           <div class="col-lg-6">
-            <img class="img-fluid mb-4 mb-lg-0" src="img/gardenroom.jpg" alt="">
+            <img class="img-fluid mb-4 mb-lg-0" src="img/waterview_chandelier.jpg" alt="">
           </div>
           <div class="col-lg-6">
 
@@ -45,6 +45,7 @@
             <p>The bright and spacious room boast large windows overlooking Lake Zoar and the cermony will take place just before sunset.  </p>
             <P> Cocktail hour, dinner, and dancing will commence immeadiately after upstairs in the East Ballroom. </p>
             <p> Address: 215 Roosevelt Drive, Monroe, CT
+            <p> See dinner options below </p>
           </div>
         </div>
       </div>
