--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,7 +39,7 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img class="d-block img-fluid w-100" src="img/ceremony.png" alt="">
+              <img class="d-block img-fluid w-100" src="img/Ceremony.png" alt="">
               <div class="carousel-caption d-none d-md-block">
 
                 <p class="text-shadow"></p>
@@ -55,7 +55,7 @@
             <div class="carousel-item">
               <img class="d-block img-fluid w-100" src="img/iceplant.png" alt="">
               <div class="carousel-caption d-none d-md-block">
-                
+
                 <p class="text-shadow"></p>
               </div>
             </div>
