--- a/app/views/pages/appointments.html.erb
+++ b/app/views/pages/appointments.html.erb
@@ -49,7 +49,8 @@
               <div class="mb-4"><a href="tel:(203) 267-2639">(203) 267-2639</a> </div>
               <p> Ask for the Santore/Ward room block </p>
               <p> Rates begin at $109 a night </p>
-              <p> After-party will be held at the hotel after the wedding in the Tavern. </p>
+              <p> After-party will be held at the hotel in the Tavern. </p>
+              <p> Shuttle bus provided to and from hotel to wedding venue and back </p>
               <div class="mb-4">
 
               </div>
