Added new link click on where to stay page

--- a/app/views/pages/appointments.html.erb
+++ b/app/views/pages/appointments.html.erb
@@ -32,7 +32,7 @@
         <div class="bg-faded p-4 my-4">
           <hr class="divider">
           <h2 class="text-center text-lg text-uppercase my-0"> Hotel Block at <bold>The Heritage Hotel and Spa </bold><br>
-            <strong><a href="https://www.bestwestern.com/en_US/book/hotel-rooms.07029.html?groupId=7R6GY0I5">Book Here</a></strong>
+            <strong><a href="https://www.bestwestern.com/en_US/book/hotel-rooms.07029.html?groupId=7R6GY0I5" target="_blank">Book Here</a></strong>
           </h2>
           <hr class="divider">
           <div class="row">
