Added engagement photos

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,7 +7,7 @@
     <hr class="divider">
     <div class="row">
       <div class="col-lg-6">
-        <img class="img-fluid mb-4 mb-lg-0" src="img/IMG_6420.jpg" alt="">
+        <img class="img-fluid mb-4 mb-lg-0" src="img/piggyback.jpg" alt="">
       </div>
       <div class="col-lg-6">
         <p> A former librarian turned software developer, Katherine knows a thing or two about cracking the code - be it the Dewey Decimal System, or a website application. When she’s not on the computer, she’s off going for a run, having some tacos, drinking wine, and - last but not least - petting her regal cat, Reggie.  </p>
