--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -39,21 +39,21 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img class="d-block img-fluid w-100" src="img/Ceremony.png" alt="">
+              <img class="d-block img-fluid w-100" src="img/pastelkiss.jpg" alt="">
               <div class="carousel-caption d-none d-md-block">
 
                 <p class="text-shadow"></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid w-100" src="img/florida1.jpg" >
+              <img class="d-block img-fluid w-100" src="img/shadowsilouhette.jpg" >
               <div class="carousel-caption d-none d-md-block">
 
                 <p class="text-shadow"></p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid w-100" src="img/iceplant.png" alt="">
+              <img class="d-block img-fluid w-100" src="img/bridgepiggyback.jpg" alt="">
               <div class="carousel-caption d-none d-md-block">
 
                 <p class="text-shadow"></p>
